--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "csvtojson": "^2.0.8",
+    "dotenv": "^8.1.0",
     "polka": "^0.5.0",
     "sirv": "^0.4.0",
     "sqlite3": "^4.0.8"
