--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "csvtojson": "^2.0.8",
-    "dotenv": "^8.1.0",
-    "polka": "^0.5.0",
+    "dotenv": "^8.2.0",
+    "polka": "next",
+    "sass": "^1.25.0",
     "sirv": "^0.4.0",
-    "sqlite3": "^4.0.8"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -25,17 +25,23 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@smui/textfield": "^1.0.0-beta.20",
+    "@material/theme": "^4.0.0",
+    "@rollup/plugin-alias": "^3.0.1",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.2.0",
+    "@smui/button": "^1.0.0-beta.20",
+    "@smui/card": "^1.0.0-beta.20",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.0.0",
+    "postcss-scss": "^2.0.0",
+    "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-postcss": "^2.0.6",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.26",
+    "sapper": "^0.27.0",
     "svelte": "^3.0.0",
-    "svelte-material-ui": "^1.0.0-beta.20"
+    "svelte-material-ui": "^1.0.0-beta.15"
   }
 }
